# manager

./: .gitignore  CMakeLists.txt  Collection.cpp  Makefile  README.md  Record.cpp  Record.h  manager
include/: Collection.h  Record.h  Utility.h
src/: Collection.cpp  Record.cpp  Utility.cpp  main.cpp
